# snapchange

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.base_fuzzer  Dockerfile.base_target  HACKING.md  Makefile  README.md  clippy.toml  fuzzer_template  install.sh  make_base_images.sh  rustfmt.toml
bench/: Cargo.toml  README.md  bench.sh  fuzzer.rs  generate_graph.py  make_bench_target.sh  reset.sh
bench/bench_harness/: .gdb_history  Cargo.toml
bench/gather_data/: Cargo.toml
bench/src/: fuzzer.rs  main.rs
docker/: .dockerignore  .gitignore  Dockerfile  Dockerfile.base_target  Dockerfile.fuzzer  Dockerfile.snapshot  Makefile  README.md  build.sh  install_linux_qemu.sh
docker/coverage_scripts/: .gitignore  angr_snapchange.py  bn_snapchange.py  ghidra_basic_blocks.py  ghidra_script_bb_worker.py  rz_snapchange.py
docker/fuzzer_template/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.harness  Dockerfile.snapshot  Makefile  build.rs  make_snapshot.sh
docker/install/: 0001-Snapchange-patches.patch  angr.sh  ghidra.sh  linux.sh  qemu.sh  rizin.sh
docker/src/: fuzzer.rs  fuzzer.rs.libfuzzer  main.rs
docker/utils/: .ghidra_worker.py  build.sh  combine_symbols.py  gdbsnapshot.py  ghidra_basic_blocks.py  go.sh  log.sh  reset_snapshot.sh  snapshot.sh  start.sh
docs/: ARCHITECTURE.md  COOKBOOK.md  DEBUG_TRACE.md  FUZZ_FUNCTION_LIFECYCLE.md  PROJECT_DIRECTORY.md  REDQUEEN.md  REGISTER.md  VIRTUALBOX_SNAPSHOT.md
examples/: .gitignore  Makefile  init_ami.sh  install_ghidra.sh  install_prereqs.sh  test.include.sh  test.sh
examples/01_getpid/: .dockerignore  .gitignore  Cargo.toml  DEMO.md  Dockerfile  Makefile  README.md  fuzzer.rs  fuzzer.rs.ami  main.rs  make_example.sh  make_snapshot.sh  reset.sh  run.sh  test.sh
examples/01_getpid/dockers/: Dockerfile.snapshot  Dockerfile.target
examples/01_getpid/harness/: Makefile  example1  example1.c
examples/01_getpid/src/: constants.rs  fuzzer.rs  main.rs
examples/02_libtiff/: .dockerignore  .gitignore  0001-snapshot.patch  Cargo.toml  Dockerfile  Dockerfile.target  Makefile  README.md  build.rs  fuzzer.rs  fuzzer.rs.ami  main.rs  make_example.sh  make_snapshot.sh  reset.sh  run.sh  test.sh  triage.sh
examples/03_ffmpeg_custom_mutator/: 0001-snapshot.patch  Makefile  (+10 more)
examples/05_redqueen/: .dockerignore  Cargo.toml  Dockerfile.snapshot  Makefile  README.md  bench.sh  build.rs  fuzzer.rs  fuzzer.rs.ami  main.rs  make_example.sh  make_snapshot.sh  test.sh
examples/05_redqueen/harness/: Makefile  config.toml  redqueen_ami  redqueen_ami.cmps  redqueen_ami.covbps  redqueen_ami.coverage_analysis  test_cmpsolves  test_cmpsolves.c  test_cmpsolves.cmps  test_cmpsolves.covbps  test_cmpsolves.coverage_analysis  test_redqueen.c
examples/05_redqueen/src/: fuzzer.rs  main.rs  redqueen.rs
examples/06_custom_feedback/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  bench.sh  build.rs  fuzz.sh  make_snapshot.sh  run.sh  test.sh  trace.sh
examples/06_custom_feedback/harness/: .gitignore  Makefile  big.h  maze.c  small.h
examples/06_custom_feedback/harness/.solutions/: maze.big  maze.big.crash  maze.small  maze.small.crash
examples/06_custom_feedback/src/: fuzzer.rs  main.rs
examples/08_textinput_mujs/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  dict.txt  make_dict.py  test.sh
examples/08_textinput_mujs/.solutions/: magic_crash.js  party_crash.js
examples/08_textinput_mujs/harness/: .gitignore  Makefile  main.c
examples/08_textinput_mujs/input/: magic.js  party.js
examples/08_textinput_mujs/src/: fuzzer.rs  main.rs
examples/standalone/libfuzzer/: Cargo.toml  Dockerfile  make_example.sh
examples/standalone/libfuzzer/harness/: .dockerignore  Makefile  example.c
examples/standalone/libfuzzer/src/: fuzzer.rs
fuzzer_template/: Cargo.toml  create_snapshot.sh
qemu_snapshot/: gdbcmds  gdbsnapshot.py
src/: addrs.rs  apic.rs  cmdline.rs  cmp_analysis.rs  colors.rs  config.rs  coverage_analysis.rs  exception.rs  expensive_mutators.rs  feedback.rs  filesystem.rs  fuzz_input.rs  fuzzer.rs  fuzzvm.rs  interrupts.rs  kvm.rs  lib.rs  linux.rs  memory.rs  msr.rs  mutators.rs  page_table.rs  regs.rs  rng.rs  segment.rs  stack_unwinder.rs  stats.rs  stats_tui.rs  symbols.rs  timer.rs  try_macros.rs  utils.rs  vbcpu.rs
utils/: README.md  aflpp_dict2file_to_dir.py  coverage_scripts  find_vmmap_region.py  plot_stats_diff.py  vmlinux_to_symbols.py
(+114 files in other folders)
