[package]
name = "example_fuzzer"
version = "0.1.0"
edition = "2021"
exclude = ["snapshot", "docker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snapchange = { version = "0.1.0", path = "../.."}
log = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

[build-dependencies]
regex = "1"

[profile.release]
panic = "abort"
lto = "thin"
opt-level = 3
debug = true

[features]
default = ["redqueen"]
redqueen = ["snapchange/redqueen"]
