[package]
name = "mujs_fuzzer"
version = "0.1.0"
edition = "2021"
exclude = ["qemu_snapshot", "snapshot"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snapchange = { path = "../../" }
log = "0.4"

[build-dependencies]
regex = "1"

[features]
default = []
redqueen = ["snapchange/redqueen"]

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true
