[package]
name = "example_fuzzer"
version = "0.1.0"
edition = "2021"
exclude = ["snapshot", "docker"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
# snapchange = {path = "../../../", features = ["libnuma"]}
snapchange = {path = "../../../"}
rand = "0.8"
# snmalloc-rs = "0.3"
log = "0.4"

[build-dependencies]
regex = "1"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1
opt-level = 3
debug = true
